# Distributor-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_build.yml
doc/: structure.drawio
resource/: template.txt  test-distributor-config.toml
resource/sub-resource-dir-a/: template-c.txt
resource/sub-resource-dir-b/: template-b.txt
src/: distributor.rs  distributor_cache_db.rs  distributor_config.rs  main.rs
