[package]
name = "distributor"
version = "0.1.0"
edition = "2021"
authors = ["LviatYi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.11"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
sha2 = "0.10.8"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
